--- a/config.yml
+++ b/config.yml
@@ -5,11 +5,11 @@ db:
     #the follows databases were injects for Hygen
     mysql:
       - enabled: true
-        host: 10.20.17.103
+        host: localhost
         port: 3306
         username: root
-        password: Peru2013
-        database: ncr_dpc4_09032020
+        password: 123456Aa
+        database: mysql
         nameconn: mysql
 contacts:
     name: Juan oscco
